bugfix: Fix z-index bug in event editor. Scroll to top on hitting edit.

--- a/public/static/stylesheets/portals.style.css
+++ b/public/static/stylesheets/portals.style.css
@@ -1,6 +1,7 @@
 .edit_item {
 	position:absolute;
 	top:0;
+	z-index: 100;
 	width: 100%;
 	box-shadow:0px 5px 3px -3px rgba(0,0,0,0.2);
 	background:white;
